<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit" />
    <item
        android:id="@+id/menu_btn_copy_link"
        android:title="@android:string/copyUrl" />
    <item
        android:id="@+id/menu_btn_open"
        android:title="@string/open_ext" />
    <item
        android:id="@+id/btn_about"
        android:title="@string/about" />
    <item
        app:showAsAction="ifRoom"
        android:icon="@drawable/search_24dp"
        android:id="@+id/menu_btn_search"
        android:title="@string/search" />
    <item
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_24dp"
        android:id="@+id/menu_btn_home"
        android:title="@string/home" />
</menu>