<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:scaleType="fitCenter"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/app_icon" />
        <TextView
            android:textColor="@color/black"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"/>
            <TextView
                android:id="@+id/tvVersion"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="VERSION"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name"/>
            <TextView
                android:id="@+id/tvPackage"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PACKAGE"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_time"/>
            <TextView
                android:id="@+id/tvTime"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PACKAGE"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_comment"/>
            <TextView
                android:id="@+id/tvGit"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GIT"/>
        </LinearLayout>
        <TextView
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="https://ottohub.cn/"
            android:textColor="@color/material_dynamic_primary0"
            android:textSize="25sp" />
        <TextView
            android:autoLink="all"
            android:textColor="@color/material_dynamic_primary0"
            android:text="https://hanana2.link/"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="25sp"
            android:autoLink="all"
            android:textColor="@color/material_dynamic_primary0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="https://github.com/fhyjs/ottohub_andriod" />
    </LinearLayout>
</ScrollView>